supports **auto-Javadoc generation**